[tool.poetry]
name = "tutorial-server"
version = "0.1.0"
description = ""
authors = ["Mark Hall <mark.hall@open.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyramid = "^1.10.4"
waitress = "^1.4.4"
filetype = "^1.0.7"
requests = "^2.24.0"
decorator = "^4.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
WebTest = ">=1.3.1"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pylint = "^2.5.3"

[tool.poetry.plugins]

[tool.poetry.plugins."paste.app_factory"]
"main" = "tutorial_server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
