[tool.poetry]
name = "tutorial-server"
version = "0.4.0"
description = ""
authors = ["Mark Hall <mark.hall@open.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.1"
filetype = "^1.0.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-print = "^3.1.4"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pylint = "^2.5.3"
tox = "^3.14.6"
pre-commit = "^2.2.0"

[tool.poetry.plugins]

[tool.poetry.plugins."paste.app_factory"]
"main" = "tutorial_server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
